<resources>
    <string name="title">DroneSafe</string>
    <string name="google_app_id">dronesafe-1290</string>
    <string name="app_name">DroneSafe</string>
    <string name="title_activity_settings">Settings</string>

    <string name="current_location_key">current_location</string>

    <!-- strings for drawer -->
    <string name="nav_no_fly_label">No-fly zones</string>
    <string name="nav_obstructions_label">Obstructions</string>
    <string name="nav_about_label">About</string>
    <string name="nav_settings_label">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_default_location">Waterloo</string>
    <string name="pref_title_location">Set Location</string>
    <string name="pref_location_key">location</string>

    <string name="pref_title_temp">Temperature Units</string>
    <string name="pref_temp_key">temperature</string>
    <string name="pref_temp_units_celsius">celsius</string>
    <string name="pref_temp_units_fahrenheit">fahrenheit</string>
    <string name="pref_temp_celsius_label">Celsius</string>
    <string name="pref_temp_fahrenheit_label">Fahrenheit</string>

    <string name="pref_title_dist">Distance Units</string>
    <string name="pref_dist_key">distance</string>
    <string name="pref_dist_units_metres">metres</string>
    <string name="pref_dist_units_feet">feet</string>
    <string name="pref_dist_metres_label">Metres</string>
    <string name="pref_dist_feet_label">Feet</string>

    <string name="pref_title_speed">Wind Speed Units</string>
    <string name="pref_speed_key">speed</string>
    <string name="pref_speed_units_kmh">km/h</string>
    <string name="pref_speed_units_mph">mph</string>
    <string name="pref_speed_kmh_label">Kilometres per hour (km/h)</string>
    <string name="pref_speed_mph_label">Miles per hour (mph)</string>

    <!-- Strings related to About -->
    <string name="ffa_title">
        If you are flying for commercial purposes you must get FAA permission to fly.
        To prevent accidents for  during recreational flights the FFA recommends:
    </string>
    <string name="faa_rule1"> Fly below 400 feet (120 meters) and remain clear of obstacles</string>
    <string name="faa_rule2"> Keep the aircraft within visual line of sight at all times</string>
    <string name="faa_rule3"> Remain well clear of and do not interfere with manned aircraft operations</string>
    <string name="faa_rule4"> Do not fly within 5 miles of an airport unless you contact the airport and control tower before flying</string>
    <string name="faa_rule5"> Do not fly near people or stadiums </string>
    <string name="faa_rule6"> Do not fly an aircraft that weighs more than 55 lbs</string>
    <string name="faa_rule7"> Don not be careless or reckless with your unmanned aircraft</string>

    <string name="love">Made with love at SpaceApps Waterloo 2016</string>
    <!-- For Activity_main -->
    <string name="search">Search</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
