<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.owner.dronesafe.AboutActivity"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/drone"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="DroneSafe"
        android:id="@+id/textView3"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ffa_title"
        android:id="@+id/textView5"
        android:textSize="18dp"
        android:layout_below="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faa_rule3"
        android:id="@+id/textView10"
        android:textSize="16dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faa_rule4"
        android:id="@+id/textView11"
        android:textSize="16dp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faa_rule5"
        android:id="@+id/textView12"
        android:textSize="16dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faa_rule6"
        android:id="@+id/textView13"
        android:textSize="16dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faa_rule6"
        android:id="@+id/textView14"
        android:textSize="16dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faa_rule2"
        android:id="@+id/textView6"
        android:textSize="16dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentStart="true" />


</RelativeLayout>
